feat: add api to get stats value
